--- a/Microservices/appointments/src/main/resources/application.properties
+++ b/Microservices/appointments/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=appointments
+server.port=9002
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/appointments_db?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
