--- a/Microservices/posts-service/src/main/resources/application.properties
+++ b/Microservices/posts-service/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=posts-service
+server.port=8082
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/posts-service?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
