--- a/Microservices/users-service/src/main/resources/application.properties
+++ b/Microservices/users-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8083
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/users-service?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/users_db?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
