--- a/Unit Testing/api/src/main/resources/application.properties
+++ b/Unit Testing/api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=api
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/pokemon_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
