--- a/Rest API - demo/simple-api/pom.xml
+++ b/Rest API - demo/simple-api/pom.xml
@@ -52,6 +52,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
