--- a/Spring Data JPA/app/src/main/resources/application.properties
+++ b/Spring Data JPA/app/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/meta_db?useSSL=false&serverTim
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show.sql=true
